--- a/src/home.css
+++ b/src/home.css
@@ -1,4 +1,21 @@
-/* home.css */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background:lightskyblue;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0066cc;
+}
 
 .hero-section {
   position: relative;
