--- a/src/New.css
+++ b/src/New.css
@@ -1,59 +1,53 @@
-body {
-  margin: 0;
-}
+/* New.css */
 
 .h-screen {
   min-height: 100vh;
-}
-
-.bg-cover {
-  background-size:fill;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("../src/assests/newnewbg.jpg");
+  background-size: contain;
   background-position: center;
 }
 
-.heading{
-  font-size: 2.5rem;
-  font-weight: bold;
-  text-align: center;
-  margin: 1rem;
-  color: azure;
-}
-
-.card {
+.newcard {
   flex: 1;
-  max-width: 350px;
+  max-width: 250px;
   overflow: hidden;
   position: relative;
-  border-radius: 15px;
-  margin: 1rem;
-  background: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  margin: 26rem 1rem 1rem 1rem;
+  background: rgba(255, 255, 255, 0.7);
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  border: 4px solid #bcbcbc;
   transition: transform 0.3s ease-in-out;
 }
 
-.card:hover {
+.newcard:hover {
   transform: scale(1.05);
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
 }
 
-.card-image {
-  width: 100%;
-  height: 250px;
+.newcard-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.newcard-image {
+  width: 50%; 
+  height: auto;
   object-fit: cover;
+  border-radius: 50% 50% 0 0;
 }
 
-.overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-  font-size: 2.5rem;
+.newcard-content p {
+  margin: 1rem;
   font-weight: bold;
-  text-align: center;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out; 
+  font-size: 1.3rem;
 }
 
-.card:hover .overlay {
-  opacity: 1; 
-}
